--- a/task/amazon/index.html
+++ b/task/amazon/index.html
@@ -464,23 +464,21 @@
         <span><strong>Mothers</strong></span>
         <div id="card-13-1">
           <div id="card-13-1-1">
-            <img src="./img/card-13-img-1.jpg">
-            <span>Pregnancy
-              <br>supplements</span>
+            <img src="./img/card-13-img-1.jpg" />
+            <span>Pregnancy <br />supplements</span>
           </div>
           <div id="card-13-1-2">
-            <img src="./img/card-13-img-2.jpg">
-            <span>Maternity Sleep &
-              <br>Loungewear</span>
+            <img src="./img/card-13-img-2.jpg" />
+            <span>Maternity Sleep & <br />Loungewear</span>
           </div>
         </div>
         <div id="card-13-2">
           <div id="card-13-2-1">
-            <img src="./img/card-13-img-3.jpg">
+            <img src="./img/card-13-img-3.jpg" />
             <span>Maternity pillows</span>
           </div>
           <div id="card-13-2-2">
-            <img src="./img/card-13-img-4.jpg">
+            <img src="./img/card-13-img-4.jpg" />
             <span>Maternity Skin care</span>
           </div>
         </div>
@@ -491,52 +489,53 @@
         <span><strong>Fashions for you</strong></span>
         <div id="card-14-1">
           <div id="card-14-1-1">
-            <img src="./img/card-14-img-1.jpg">
+            <img src="./img/card-14-img-1.jpg" />
           </div>
           <div id="card-14-1-2">
-            <img src="./img/card-14-img-2.jpg">
+            <img src="./img/card-14-img-2.jpg" />
           </div>
         </div>
         <div id="card-14-2">
           <div id="card-14-2-1">
-            <img src="./img/card-14-img-3.jpg">
+            <img src="./img/card-14-img-3.jpg" />
           </div>
           <div id="card-14-2-2">
-            <img src="./img/card-14-img-4.jpg">
+            <img src="./img/card-14-img-4.jpg" />
           </div>
         </div>
         <a href="#">Explore more</a>
-    </div>
-    <div id="card-15">
-      <span><strong>Hack: Crimes online |</strong></span>
-      <span><strong>Watch only on miniTV</strong></span>
-      <img src="./img/card-15-img-1.jpg">
-      <a href="#">Watch more content | only on mini. . .</a>
-    </div>
-    <div id="card-16">
-      <span><strong>One stop shop for all</strong></span>
-      <span><strong>your wedding shopping</strong></span>
-      <div id="card-16-1">
-        <div id="card-16-1-1">
-          <img src="./img/card-16-img-1.jpg">
-          <span>Shop for her</span>
-        </div>
-        <div id="card-16-1-2">
-          <img src="./img/card-16-img-2.jpg">
-          <span>Shop for him</span>
-        </div>
       </div>
-      <div id="card-16-2">
-        <div id="card-16-2-1">
-          <img src="./img/card-16-img-3.jpg">
-          <span>Pooja essentials</span>
-        </div>
-        <div id="card-16-2-2">
-          <img src="./img/card-16-img-4.jpg">
-          <span>Explore the store</span>
-        </div>
+      <div id="card-15">
+        <span><strong>Hack: Crimes online |</strong></span>
+        <span><strong>Watch only on miniTV</strong></span>
+        <img src="./img/card-15-img-1.jpg" />
+        <a href="#">Watch more content | only on mini. . .</a>
       </div>
-      <a href="#">See more</a>
+      <div id="card-16">
+        <span><strong>One stop shop for all</strong></span>
+        <span><strong>your wedding shopping</strong></span>
+        <div id="card-16-1">
+          <div id="card-16-1-1">
+            <img src="./img/card-16-img-1.jpg" />
+            <span>Shop for her</span>
+          </div>
+          <div id="card-16-1-2">
+            <img src="./img/card-16-img-2.jpg" />
+            <span>Shop for him</span>
+          </div>
+        </div>
+        <div id="card-16-2">
+          <div id="card-16-2-1">
+            <img src="./img/card-16-img-3.jpg" />
+            <span>Pooja essentials</span>
+          </div>
+          <div id="card-16-2-2">
+            <img src="./img/card-16-img-4.jpg" />
+            <span>Explore the store</span>
+          </div>
+        </div>
+        <a href="#">See more</a>
+      </div>
     </div>
   </body>
 </html>
