--- a/task/amazon/index.html
+++ b/task/amazon/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"/>
+    <link
+      href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
+      rel="stylesheet"/>
     <title>Amazon Page</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -86,6 +93,27 @@
           alt="Big Savings, More Happiness"
           src="https://m.media-amazon.com/images/G/31/Events/img23/Jupiter23/Homepage/Phase3/P3_SWM_400x39._CB575169081_.jpg"
       /></a>
+    </div>
+    <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./img/slide-img-1.jpg" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/slide-img-2.jpg" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/slide-img-3.jpg" class="d-block w-100">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
     <div id="section-1">
       <div id="card-1">
@@ -376,7 +404,7 @@
         <img src="./img/card-10.jpg" />
         <span>Amazon Basics Flexible Premium HDMI</span>
         <span>Cable (Black, 4K@60Hz, 18Gbps), 3-Foot</span>
-        <p id="price">₹189<sup>00</sup>, M.R.P.: <del>₹700.00</del></p>
+        <p>₹189<sup>00</sup>, M.R.P.: <del>₹700.00</del></p>
         <a href="#">See more</a>
       </div>
       <div id="card-11">
@@ -390,6 +418,7 @@
           <img src="./img/card-11-img-3.jpg" />
           <img src="./img/card-11-img-4.jpg" />
         </div>
+        <a href="#">See all offers</a>
       </div>
       <div id="card-12">
         <span><strong>Birthday store</strong></span>
