--- a/task/amazon/index.html
+++ b/task/amazon/index.html
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="search">
-        <select class="btn">
+        <select class="category-drop-down">
           <option>All</option>
           <option>All Categories</option>
           <option>Alex Skills</option>
@@ -106,11 +106,11 @@
           <img src="./img/slide-img-3.jpg" class="d-block w-100">
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <button id="carousel-prev" class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <button id="carousel-next" class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
