--- a/practice/psd/practice-psd/practice-6/index.html
+++ b/practice/psd/practice-psd/practice-6/index.html
@@ -29,6 +29,12 @@
         <button id="btn-1">order now</button>
       </div>
       <div class="section-2">
+        <img id="img-1" src="./img/img-1.png">
+        <img id="img-2" src="./img/img-2.png">
+        <img id="img-3" src="./img/img-3.png">
+        <img id="img-4" src="./img/img-4.png">
+        <img id="img-5" src="./img/img-5.png">
+        <img id="img-6" src="./img/img-6.png">
         <div id="section-2-1">
           <h1>Our Chef</h1>
           <p>
