--- a/practice/psd/practice-psd/practice-6/index.html
+++ b/practice/psd/practice-psd/practice-6/index.html
@@ -60,6 +60,18 @@
             </div>
         </div>
       </div>
+      <div class="section-3">
+        <div id="section-3-1">
+          <img src="./img/img-7.png">
+        </div>
+        <div id="section-3-2">
+          <h1>Best Burger</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur
+            <br>adipiscing elit. Vivamus lacinia odio vitae 
+            <br>vestibulum vestibulum.</p>
+          <button id="btn-2">order now</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
