--- a/practice/psd/practice-psd/practice-6/index.html
+++ b/practice/psd/practice-psd/practice-6/index.html
@@ -72,6 +72,42 @@
           <button id="btn-2">order now</button>
         </div>
       </div>
+      <div class="section-4">
+        <img id="img-7" src="./img/img-1.png">
+        <img id="img-8" src="./img/img-2.png">
+        <img id="img-9" src="./img/img-3.png">
+        <img id="img-10" src="./img/img-4.png">
+        <img id="img-11" src="./img/img-5.png">
+        <img id="img-12" src="./img/img-6.png">
+        <div id="section-4-1">
+          <h1>Big Burger</h1>
+          <p>Lorem ipsum dolor sit amet,
+            <br>consectetur adipiscing elit. Vivamus
+            <br>lacinia odio vitae vestibulum vestibulum.</p>
+            <button id="btn-3">order now</button>
+        </div>
+        <div id="section-4-2">
+          <img src="./img/img-7.png">
+        </div>
+      </div>
+      <div class="section-5">
+        <div id="section-5-1">
+          <h1>Statistics</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            <br>Vivamus lacinia odio vitae vestibulum vestibulum.</p>
+        </div>
+        <div id="section-5-2">
+          <div id="section-5-2-1">
+            <h1>7 K</h1>
+            <p>Customer</p>
+          </div>
+          <div id="section-5-2-2">
+            <h1>109</h1>
+            <p>Outlets</p>
+          </div>
+          <div id="section-5-2-3"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
