--- a/practice/psd/practice-psd/practice-5/index.html
+++ b/practice/psd/practice-psd/practice-5/index.html
@@ -168,7 +168,7 @@
           ipsum suspendisse ultrices gravida. Risus<br />commodo viver ra
           maecenas accumsan lacus vel facilisis.
         </p>
-        <h2>&copy;Company Name 2023,All Rights Reserved.</h2>
+        <h2>&copy;&nbsp;Company Name 2023,All Rights Reserved.</h2>
       </div>
       <div id="footer-3">
         <div id="footer-3-1">
