--- a/practice/psd/practice-psd/practice-6/index.html
+++ b/practice/psd/practice-psd/practice-6/index.html
@@ -29,12 +29,12 @@
         <button id="btn-1">order now</button>
       </div>
       <div class="section-2">
-        <img id="img-1" src="./img/img-1.png">
-        <img id="img-2" src="./img/img-2.png">
-        <img id="img-3" src="./img/img-3.png">
-        <img id="img-4" src="./img/img-4.png">
-        <img id="img-5" src="./img/img-5.png">
-        <img id="img-6" src="./img/img-6.png">
+        <img id="img-1" src="./img/img-1.png" />
+        <img id="img-2" src="./img/img-2.png" />
+        <img id="img-3" src="./img/img-3.png" />
+        <img id="img-4" src="./img/img-4.png" />
+        <img id="img-5" src="./img/img-5.png" />
+        <img id="img-6" src="./img/img-6.png" />
         <div id="section-2-1">
           <h1>Our Chef</h1>
           <p>
@@ -43,58 +43,62 @@
           </p>
         </div>
         <div id="section-2-2">
-            <div id="section-2-2-1">
-                <img src="./img/Founder.png">
-                <h1>Aiden Hunter</h1>
-                <p>Founder</p>
-            </div>
-            <div id="section-2-2-2">
-                <img src="./img/Co-Founder.png">
-                <h1>Ethel Ramsey</h1>
-                <p>Co-Founder</p>
-            </div>
-            <div id="section-2-2-3">
-                <img src="./img/Fannie_Stewart.png">
-                <h1>Fannie Stewart</h1>
-                <p>Co-Founder</p>
-            </div>
+          <div id="section-2-2-1">
+            <img src="./img/Founder.png" />
+            <h1>Aiden Hunter</h1>
+            <p>Founder</p>
+          </div>
+          <div id="section-2-2-2">
+            <img src="./img/Co-Founder.png" />
+            <h1>Ethel Ramsey</h1>
+            <p>Co-Founder</p>
+          </div>
+          <div id="section-2-2-3">
+            <img src="./img/Fannie_Stewart.png" />
+            <h1>Fannie Stewart</h1>
+            <p>Co-Founder</p>
+          </div>
         </div>
       </div>
       <div class="section-3">
         <div id="section-3-1">
-          <img src="./img/img-7.png">
+          <img src="./img/img-7.png" />
         </div>
         <div id="section-3-2">
           <h1>Best Burger</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur
-            <br>adipiscing elit. Vivamus lacinia odio vitae 
-            <br>vestibulum vestibulum.</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur <br />adipiscing elit.
+            Vivamus lacinia odio vitae <br />vestibulum vestibulum.
+          </p>
           <button id="btn-2">order now</button>
         </div>
       </div>
       <div class="section-4">
-        <img id="img-7" src="./img/img-1.png">
-        <img id="img-8" src="./img/img-2.png">
-        <img id="img-9" src="./img/img-3.png">
-        <img id="img-10" src="./img/img-4.png">
-        <img id="img-11" src="./img/img-5.png">
-        <img id="img-12" src="./img/img-6.png">
+        <img id="img-7" src="./img/img-1.png" />
+        <img id="img-8" src="./img/img-2.png" />
+        <img id="img-9" src="./img/img-3.png" />
+        <img id="img-10" src="./img/img-4.png" />
+        <img id="img-11" src="./img/img-5.png" />
+        <img id="img-12" src="./img/img-6.png" />
         <div id="section-4-1">
           <h1>Big Burger</h1>
-          <p>Lorem ipsum dolor sit amet,
-            <br>consectetur adipiscing elit. Vivamus
-            <br>lacinia odio vitae vestibulum vestibulum.</p>
-            <button id="btn-3">order now</button>
+          <p>
+            Lorem ipsum dolor sit amet, <br />consectetur adipiscing elit.
+            Vivamus <br />lacinia odio vitae vestibulum vestibulum.
+          </p>
+          <button id="btn-3">order now</button>
         </div>
         <div id="section-4-2">
-          <img src="./img/img-7.png">
+          <img src="./img/img-7.png" />
         </div>
       </div>
       <div class="section-5">
         <div id="section-5-1">
           <h1>Statistics</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            <br>Vivamus lacinia odio vitae vestibulum vestibulum.</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            <br />Vivamus lacinia odio vitae vestibulum vestibulum.
+          </p>
         </div>
         <div id="section-5-2">
           <div id="section-5-2-1">
@@ -105,7 +109,50 @@
             <h1>109</h1>
             <p>Outlets</p>
           </div>
-          <div id="section-5-2-3"></div>
+          <div id="section-5-2-3">
+            <h1>35</h1>
+            <p>Country</p>
+          </div>
+        </div>
+      </div>
+      <div class="section-6">
+        <div id="section-6-1">
+          <img id="img-13" src="./img/img-1.png" />
+          <img id="img-14" src="./img/img-2.png" />
+          <img id="img-15" src="./img/img-3.png" />
+          <img id="img-16" src="./img/img-4.png" />
+          <img id="img-17" src="./img/img-5.png" />
+          <img id="img-18" src="./img/img-6.png" />
+          <h1>Popular Package</h1>
+        </div>
+        <div id="section-6-2">
+          <div id="card-1">
+            <h1>Package |</h1>
+            <img src="./img/img-8.png" />
+            <h3>$10.00</h3>
+            <p>
+              Lorem ipsum dolor sit amet, <br />consectetur adipiscing elit.
+            </p>
+            <div id="btn-4">Order Now</div>
+          </div>
+          <div id="card-2">
+            <h1>Package ||</h1>
+            <img src="./img/img-8.png" />
+            <h3>$10.00</h3>
+            <p>
+              Lorem ipsum dolor sit amet, <br />consectetur adipiscing elit.
+            </p>
+            <div id="btn-4">Order Now</div>
+          </div>
+          <div id="card-3">
+            <h1>Package |||</h1>
+            <img src="./img/img-8.png" />
+            <h3>$10.00</h3>
+            <p>
+              Lorem ipsum dolor sit amet, <br />consectetur adipiscing elit.
+            </p>
+            <div id="btn-4">Order Now</div>
+          </div>
         </div>
       </div>
     </div>
