--- a/practice/psd/practice-psd/practice-6/index.html
+++ b/practice/psd/practice-psd/practice-6/index.html
@@ -155,6 +155,16 @@
           </div>
         </div>
       </div>
+      <div id="section-7">
+        <div id="section-7-1">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur 
+            <br>adipiscing elit. Vivamus lacinia odio vitae 
+            <br>vestibulum vestibulum.
+          </p>
+          <h1>Barry Henderson</h1>
+        </div>
+      </div>
     </div>
   </body>
 </html>
