--- a/practice/psd/practice-psd/practice-6/index.html
+++ b/practice/psd/practice-psd/practice-6/index.html
@@ -158,12 +158,19 @@
       <div id="section-7">
         <div id="section-7-1">
           <p>
-            Lorem ipsum dolor sit amet, consectetur 
-            <br>adipiscing elit. Vivamus lacinia odio vitae 
-            <br>vestibulum vestibulum.
+            Lorem ipsum dolor sit amet, consectetur
+            <br />adipiscing elit. Vivamus lacinia odio vitae <br />vestibulum
+            vestibulum.
           </p>
           <h1>Barry Henderson</h1>
         </div>
+      </div>
+      <div id="section-8">
+        <h1>Don’t miss Our Update</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+          lacinia odio vitae vestibulum vestibulum.
+        </p>
       </div>
     </div>
   </body>
