--- a/practice/psd/practice-psd/practice-6/index.html
+++ b/practice/psd/practice-psd/practice-6/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="header">
@@ -168,9 +175,59 @@
       <div id="section-8">
         <h1>Don’t miss Our Update</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
-          lacinia odio vitae vestibulum vestibulum.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          <br />Vivamus lacinia odio vitae vestibulum vestibulum.
         </p>
+        <div id="input">
+          <input type="text" id="text" placeholder="Your Email" />
+          <button id="btn-5">Subscribe</button>
+        </div>
+        <img src="./img/img-1.png" id="img-19" />
+        <img src="./img/img-2.png" id="img-20" />
+        <img src="./img/img-3.png" id="img-21" />
+        <img src="./img/img-4.png" id="img-22" />
+        <img src="./img/img-5.png" id="img-23" />
+        <img src="./img/img-6.png" id="img-24" />
+        <img src="./img/img-2.png" id="img-25" />
+        <img src="./img/img-6.png" id="img-26" />
+      </div>
+      <div id="footer">
+        <div id="footer-1">
+          <h1>Title Here</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur
+            <br />adipiscing elit. Aliquam at dignissim nunc, <br />id maximus
+            ex.Etiam nec dignissim elit, <br />at dignissim enim.
+          </p>
+          <div id="icon">
+            <i class="fa-brands fa-square-instagram fa-2xl"></i>
+            <i class="fa-brands fa-facebook fa-2xl"></i>
+            <i class="fa-brands fa-square-twitter fa-2xl"></i>
+            <i class="fa-brands fa-square-whatsapp fa-2xl"></i>
+          </div>
+        </div>
+        <div id="footer-2">
+          <h1>About</h1>
+          <p>History</p>
+          <p>Our Team</p>
+          <p>Brand Guildlines</p>
+          <p>Terms & Conditions</p>
+          <p>Privacy Policy</p>
+        </div>
+        <div id="footer-3">
+          <h1>Serivces</h1>
+          <p>How to Order</p>
+          <p>Our Product</p>
+          <p>Order Status</p>
+          <p>Promo</p>
+          <p>Payment Method</p>
+        </div>
+        <div id="footer-4">
+          <h1>Other</h1>
+          <p>Contact Us</p>
+          <p>Help</p>
+          <p>Privacy</p>
+        </div>
       </div>
     </div>
   </body>
