--- a/practice/psd/practice-psd/practice-7/index.html
+++ b/practice/psd/practice-psd/practice-7/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PSD File</title>
     <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="header">
@@ -147,10 +154,33 @@
       </div>
       <div id="section-7">
         <div id="section-7-1">
-          <img src="./Images/Rectangle.png" id="img-16" alt=""/>
-          <img src="./Images/img-6.png" id="img-17" alt=""/>
+          <img src="./Images/img-6.png" id="img-17" alt="" />
         </div>
-        <div id="section-7-2"></div>
+        <div id="section-7-2">
+          <h3>Enjoy Best Meal</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna
+          </p>
+        </div>
+      </div>
+      <div id="section-8">
+        <div id="section-8-1">
+          <img src="./Images/img-16.png" alt="" />
+        </div>
+        <div id="section-8-2">
+          <a href="#">Home</a>
+          <a href="#">About Us</a>
+          <a href="#">Services</a>
+          <a href="#">Foods</a>
+          <a href="#">Contact</a>
+          <a href="#">Location</a>
+        </div>
+        <div id="section-8-3">
+          <i class="fa-brands fa-facebook fa-2xl"></i>
+          <i class="fa-brands fa-square-twitter fa-2xl"></i>
+          <i class="fa-brands fa-square-instagram fa-2xl"></i>
+        </div>
       </div>
     </div>
   </body>
