--- a/practice/psd/practice-psd/mediaquery_psd/practice-3/index.html
+++ b/practice/psd/practice-psd/mediaquery_psd/practice-3/index.html
@@ -65,7 +65,7 @@
         </div>
       </div>
     </div>
-     <div class="section-3">
+    <div class="section-3">
       <h1>Title Here</h1>
       <p>
         Lorem Ipsum available, but the majority have <br />suffered alteration
@@ -98,7 +98,7 @@
         </div>
       </div>
     </div>
-    <!-- <div class="section-4">
+    <div class="section-4">
       <div class="section-4-1">
         <div class="section-4-1-1">
           <div class="section-4-1-2">
@@ -117,8 +117,8 @@
         </p>
         <button class="btn-4">Our Service</button>
       </div>
-    </div> -->
-    <!-- <div class="section-5">
+    </div>
+    <div class="section-5">
       <h1>Title Here</h1>
       <p>
         Lorem Ipsum available, but the majority have <br />suffered alteration
@@ -141,8 +141,8 @@
           <button class="btn-5">Buy Now</button>
         </div>
       </div>
-    </div> -->
-    <!-- <div class="section-6">
+    </div>
+    <div class="section-6">
       <h1>The vetcare team</h1>
       <p>
         Lorem Ipsum available, but the majority have <br />suffered alteration
@@ -183,8 +183,8 @@
           </div>
         </div>
       </div>
-    </div> -->
-    <!-- <div class="section-7">
+    </div>
+    <div class="section-7">
       <div class="section-7-1">
         <div class="section-7-1-1">
           <img src="./Img/Icon-1.png" alt="" />
@@ -202,8 +202,8 @@
           <p>Vaccinations</p>
         </div>
       </div>
-    </div> -->
-    <!-- <div class="section-8">
+    </div>
+    <div class="section-8">
       <h1>Recent Posts</h1>
       <p>
         Lorem Ipsum available, but the majority have <br />suffered alteration
@@ -241,8 +241,8 @@
           <button class="btn-6">Read More+</button>
         </div>
       </div>
-    </div> -->
-    <!-- <div class="section-9">
+    </div>
+    <div class="section-9">
       <div class="section-9-1">
         <h2>About</h2>
         <p>History</p>
@@ -274,6 +274,6 @@
           <i class="fa-brands fa-square-whatsapp"></i>
         </div>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
