--- a/practice/psd/practice-psd/mediaquery_psd/practice-1/index.html
+++ b/practice/psd/practice-psd/mediaquery_psd/practice-1/index.html
@@ -17,11 +17,11 @@
       </div>
     </div>
     <div class="container">
-      <div id="section-1">
-        <div id="section-1-1">
-          <img src="./Images/logo-1.jpg" />
+      <div class="section-1">
+        <div class="section-1-1">
+          <img src="./images/logo-1.jpg" alt="" />
         </div>
-        <div id="section-1-2">
+        <div class="section-1-2">
           <h1>Mariachi</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur<br />adipiscing elit.
@@ -30,22 +30,22 @@
           <button class="btn-1">Order Now</button>
         </div>
       </div>
-      <div id="section-2">
+      <div class="section-2">
         <h1>Don't Miss our Menu</h1>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus<br />
           lacinia odio vitae vestibulum vestibulum.
         </p>
         <button class="btn-2">See Menu</button>
-        <div id="section-2-1">
+        <div class="section-2-1">
           <img src="./Images/img-1.jpg" />
         </div>
       </div>
-      <div id="section-3">
-        <div id="section-3-1">
+      <div class="section-3">
+        <div class="section-3-1">
           <img src="./Images/img-2.jpg" />
         </div>
-        <div id="section-3-2">
+        <div class="section-3-2">
           <h1>About Mariachi</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur<br />adipiscing elit.
@@ -54,18 +54,18 @@
           <button class="btn-3">Tell Me More</button>
         </div>
       </div>
-      <div id="section-4">
-        <div id="section-4-1">
+      <div class="section-4">
+        <div class="section-4-1">
           <h1>25%</h1>
           <h2>discount</h2>
           <p>on tacos!</p>
         </div>
-        <div id="section-4-2">
+        <div class="section-4-2">
           <img src="./Images/img-3.jpg" />
         </div>
       </div>
-      <div id="section-5">
-        <div id="section-5-1">
+      <div class="section-5">
+        <div class="section-5-1">
           <h1>See Our Offers</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur<br />adipiscing elit.
@@ -73,22 +73,25 @@
           </p>
           <button class="btn-4">See Offers</button>
         </div>
-        <div id="section-5-2">
+        <div class="section-5-2">
           <img src="./Images/img-4.jpg" />
         </div>
       </div>
-      <div id="section-6">
-        <div id="section-6-1">
-          <img src="./Images/logo-1.jpg" />
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br />sed do
-            eiusmod tempor incididunt ut labore et dolore<br />magna aliqua.
-          </p>
-          <p>Pedro Rodriguez</p>
+      <div class="section-6">
+        <div class="section-6-1">
+          <div class="section-6-2">
+            <img src="./Images/logo-1.jpg" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br />sed
+              do eiusmod tempor incididunt ut labore et dolore<br />magna
+              aliqua.
+            </p>
+            <p>Pedro Rodriguez</p>
+          </div>
         </div>
       </div>
-      <div id="section-7">
-        <div id="section-7-1">
+      <div class="section-7">
+        <div class="section-7-1">
           <h1>Get our Latest Offers!</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br />sed do
@@ -100,21 +103,22 @@
           </form>
         </div>
       </div>
-      <div id="footer">
+      <div class="footer">
         <div class="footer-conatiner">
           <div>
             <h1>Mariachi</h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit. Aliquam
-              at dignissim nunc,<br>id maximus ex. Etiam nec dignissim elit, at<br>
+              Lorem ipsum dolor sit amet, consectetur<br />adipiscing elit.
+              Aliquam at dignissim nunc,<br />id maximus ex. Etiam nec dignissim
+              elit, at<br />
               dignissim enim.
             </p>
-            <img src="./images/fb.jpg">
-            <img src="./images/instagram.jpg">
-            <img src="./images/twitter.jpg">
-            <img src="./images/whatsapp.jpg">         
+            <img src="./images/fb.jpg" />
+            <img src="./images/instagram.jpg" />
+            <img src="./images/twitter.jpg" />
+            <img src="./images/whatsapp.jpg" />
           </div>
-          <div id="footer-list-1">
+          <div class="footer-list-1">
             <h2>About</h2>
             <dl>
               <dd>History</dd>
@@ -124,7 +128,7 @@
               <dd>Privacy Policy</dd>
             </dl>
           </div>
-          <div id="footer-list-2">
+          <div class="footer-list-2">
             <h2>Services</h2>
             <dl>
               <dd>How to Order</dd>
@@ -134,7 +138,7 @@
               <dd>Payment Method</dd>
             </dl>
           </div>
-          <div id="footer-list-3">
+          <div class="footer-list-3">
             <h2>Other</h2>
             <dl>
               <dd>Contact Us</dd>
